--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
             { title: "Current Time", info: "6:02 PM." },
             { title: "Address of Origin", info: "2323 W Historic Hwy 66, Gallup, NM 87301." },
             { title: "Address of Destination", info: "317 4th Ave, La Puente, CA 91746." },
-            { title: "Distance to Destination", info: "0" },
-            { title: "Estimated Time to Destination", info: "0" },
+            { title: "Distance to Destination", info: "635.31 miles." },
+            { title: "Estimated Time to Destination", info: "602 minutes." },
             { title: "State of Charge of Battery", info: "100% charge." },
             { title: "Range of Current Battery", info: "300 minutes." },
             { title: "Estimated Drive Distance with Current Charge", info: "225 miles." },
@@ -233,10 +233,10 @@
                 name: 'ADOA Utilities - 1400 W Washington S',
 
                 location: '1400 West Washington St, Phoenix, AZ 85007, USA',
-                originDistance: ' Miles',
-                originTime: ' Minutes',
-                destDistance: ' Miles ',
-                destTime: ' Minutes',
+                originDistance: '279.19',
+                originTime: '293',
+                destDistance: '357.6',
+                destTime: '342',
 
                 waitTime: [
                         { type: 'J1772', value: '0' },
@@ -280,10 +280,10 @@
                 name: 'Flagstaff Visitor Center',
 
                 location: '2 S Beaver St, Flagstaff 86001',
-                originDistance: ' Miles',
-                originTime: ' Minutes',
-                destDistance: ' Miles ',
-                destTime: ' Minutes',
+                originDistance: '182.21',
+                originTime: '176',
+                destDistance: '454.33',
+                destTime: '437',
                 
                 waitTime: [
                         { type: 'J1772', value: '0' }
@@ -945,8 +945,8 @@
         // Add route time/distance to instructions & update charging station details
         map.on('load', async () => {
             await getRoute(0); // Ensure this is awaited properly
-            await updateAndDisplayRouteInstructions();  // Ensure this is awaited properly
-            await updateChargingStationDetails();  // Ensure this is awaited properly
+            // await updateAndDisplayRouteInstructions();  // Ensure this is awaited properly
+            // await updateChargingStationDetails();  // Ensure this is awaited properly
             addChargingStations();  // You might need to re-add stations to reflect updated data
         });
 
